--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Title</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="https://example.org/assets/css/main.css"/>
-    <noscript><link rel="stylesheet" href="https://example.org/assets/css/noscript.css"/></noscript>
+    <link rel="stylesheet" href="http://example.org/assets/css/main.css"/>
+    <noscript><link rel="stylesheet" href="http://example.org/assets/css/noscript.css"/></noscript>
     <style>
-        :root{--site-background : url("https://example.org/images/bg.jpg")};
+        :root{--site-background : url("http://example.org/images/bg.jpg")};
     </style> 
     
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -58,10 +58,10 @@
 
 
     
-    <script src=https://example.org/assets/js/jquery.min.js></script>
-    <script src=https://example.org/assets/js/browser.min.js></script>
-    <script src=https://example.org/assets/js/breakpoints.min.js></script>
-    <script src=https://example.org/assets/js/util.js></script>
-    <script src=https://example.org/assets/js/main.js></script>
+    <script src=http://example.org/assets/js/jquery.min.js></script>
+    <script src=http://example.org/assets/js/browser.min.js></script>
+    <script src=http://example.org/assets/js/breakpoints.min.js></script>
+    <script src=http://example.org/assets/js/util.js></script>
+    <script src=http://example.org/assets/js/main.js></script>
 
 </html>
