--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="content">
                         <div class="inner">
-                            <h1>My New Hugo Site</h1>
+                            <h1>Out Of The Box</h1>
                             
                         </div>
                     </div>
