--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css"/>
     <noscript><link rel="stylesheet" href="./assets/css/noscript.css"/></noscript>
     <style>
-        :root{--site-background : url("./images/bg.jpg")};
+        :root{--site-background : url("https://driedink.github.io/mywebsite/images/bg.jpg")};
     </style> 
     
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
